Fix spacing

--- a/app/styles/teachers/share-licenses-modal.sass
+++ b/app/styles/teachers/share-licenses-modal.sass
@@ -5,6 +5,8 @@
     text-transform: capitalize
 
 #share-licenses-component
+  padding-top: 5px
+
   .list-item
     transition: background-color 0.5s ease-out
   .list-enter
